# bible-memorizer

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  __init__.py  dialog.py  gen_notes.py  model.py  pyproject.toml  tasks.py
.github/workflow/: ci-linux-ubuntu-latest.yml
src/: __init__.py  dialog.py  fix_last_letters.py  gen_notes.py  model.py
